spacings fix small gutter

--- a/src/scss/foundation/_grid.scss
+++ b/src/scss/foundation/_grid.scss
@@ -27,12 +27,12 @@
 
     // small gutter
     &.u-gutter-small {
-        margin-left: ($spacing-small / -2);
-        margin-right: ($spacing-small / -2);
+        margin-left: ($spacing-default / -4);
+		margin-right: ($spacing-default / -4);
 
         > [class*=col-] {
-            padding-left: ($spacing-small / 2);
-            padding-right: ($spacing-small / 2);
+            padding-left: ($spacing-default / 4);
+            padding-right: ($spacing-default / 4);
         }
     }
 
@@ -41,7 +41,7 @@
         margin-bottom: ($spacing-default);
     }
     &.u-vertical-gutter.u-gutter-small > [class*=col-] {
-        margin-bottom: ($spacing-small);
+        margin-bottom: ($spacing-default / 2);
     }
 
 }
